--- a/WebContent/detallesactivo.xhtml
+++ b/WebContent/detallesactivo.xhtml
@@ -31,6 +31,7 @@
 						<p:fieldset legend="Acciones">
 							<h:panelGrid columns="3" cellpadding="5">
 								<p:commandButton value="Volver" actionListener="#{GestorDetallesActivo.volver}"/>
+								<p:commandButton value="Comunidad" actionListener="#{GestorDetallesActivo.cargarComunidad}" disabled="#{GestorDetallesActivo.bSinComunidad}" />
 							</h:panelGrid>
 						</p:fieldset>
 
@@ -39,6 +40,7 @@
 
 								<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button"/>
 								<p:commandButton value="Notas" onclick="dlgNotas.show()" type="button"/>
+								<p:graphicImage value="recursos/notas.png"  disabled="#{GestorDetallesActivo.bSinNotas}"/>
 
 								<p:notificationBar position="top" effect="slide" widgetVar="barraInfo" styleClass="top" style="height: auto">
 									<h:panelGrid columns="2" cellpadding="5">
